# wasm-audio-examples

./: .gitignore  Cargo.toml  README.md  build-guest.sh  build.sh  egui.sh  mul.wasm  run-host-mod.sh  run-host.sh  sin.wasm  t.wasm
guest/: Cargo.toml
guest-mul/: Cargo.toml  mul.js
guest-mul/src/: bindings.rs  lib.rs  prelude.rs
guest-mul/wit/: world.wit
guest-reverb/: Cargo.toml
guest-reverb/src/: bindings.rs  lib.rs  reverb.glicol
guest-reverb/wit/: world.wit
guest-sin/: Cargo.toml  sin.js
guest-sin/src/: bindings.rs  lib.rs  prelude.rs
guest-sin/wit/: world.wit
guest-techno/: Cargo.toml
guest-techno/src/: bindings.rs  lib.rs  prelude.rs  techno.glicol
guest-techno/wit/: world.wit
guest/src/: bindings.rs  lib.rs
guest/wit/: world.wit
host/: Cargo.toml
host-basic/: Cargo.toml
host-basic/src/: main.rs
host-egui/: Cargo.toml
host-egui/src/: audio.rs  lib.rs  main.rs  ui.rs
host-mod/: Cargo.toml
host-mod/src/: main.rs
host-stress/: Cargo.toml
host-techno/: Cargo.toml
host-techno/src/: main.rs
host/src/: main.rs
wasm-audio-plugin/: guest_mul.wasm  guest_reverb.wasm  guest_sin.wasm  guest_techno.wasm  mul-opt.wasm  reverb-opt.wasm  sin-opt.wasm  sin.wasm  techno-opt.wasm  techno.wasm
wasm-audio-utils/: Cargo.toml
wasm-audio-utils/src/: lib.rs
