[package]
name = "mul"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12.3"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:mul"

[package.metadata.component.dependencies]
