[package]
name = "guest-sin"
version = "0.1.0"
edition = "2021"

[dependencies]

wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
wasm-audio-utils = {workspace = true}

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:sin"

[package.metadata.component.dependencies]
