[package]
name = "host-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cpal = "0.15.3"
parking_lot = "0.12.3"
wasmtime = "21.0.1"
wasmtime-wasi = "21.0.1"
hashbrown = "0.14.5"
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }